<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="movies_label">Movies</string>
    <string name="director">Director:</string>
    <string name="writers">Writers:</string>
    <string name="stars">Stars:</string>
    <string name="tv_series_name">TV Shows</string>
    <string name="news_feed_name">News Feed</string>
    <string name="cast">Cast</string>
    <string name="actor_activity_label">Actor</string>
    <string name="website">Website:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="biography">Biography:</string>
    <string name="filmography">Filmography:</string>
    <string name="images">Image gallery</string>
    <string name="see_all">See All</string>
    <string name="images1">images</string>
    <string name="of">of</string>
    <string name="title_activity_tvseries">TVSeriesActivity</string>
    <string name="section_format">%1$d</string>
    <string name="years">Years:</string>
    <string name="seasons">Seasons:</string>
    <string name="season">Season</string>
    <string name="title_activity_seasons">SeasonsActivity</string>
    <string name="reviews">Reviews</string>
    <string name="see_more">Read more</string>
    <string name="hide_text">Hide</string>
    <string name="see_full_bio">See full bio</string>
    <string name="back">back</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="search_title">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_details">Forgot your details?</string>
    <string name="create_new_account">Create a new account</string>
    <string name="login_label">Login</string>
    <string name="favourites">Your Favorites</string>
    <string name="favourites_label">Favorites</string>
    <string name="watchlist">Your Watchlist</string>
    <string name="your_list">YOUR LIST</string>
    <string name="ratings">Your Ratings</string>
    <string name="more">MORE</string>
    <string name="logout">Logout</string>
    <string name="logout_question">Are you sure you want to logout?</string>
    <string name="login_to">Login to Popular Movies</string>
    <string name="login_question">Login to rate movies, manage your Watchlist, and more.</string>
    <string name="not_now">NOT NOW</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="title_activity_favourites">FavouritesActivity</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="rate_this">Rate this</string>
    <string name="tap_to_rate">Tap to rate</string>
    <string name="watchlist_label">Watchlist</string>
    <string name="ratings_label">Ratings</string>
    <string name="max_rating">/10</string>
    <string name="not_sorted">Not Sorted</string>
    <string name="remove">Remove</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="account_label">ACCOUNT</string>
    <string name="account_notification_label">ACCOUNT NOTIFICATION</string>
    <string name="movie_notification">Movie notification</string>
    <string name="tv_notification">TV Shows notification</string>
    <string name="account_name">Name:</string>
    <string name="account_username">Username:</string>
    <string name="trailer">Trailer</string>
    <string name="tv_notification_text"> new episodes are airing today. Check out now!</string>
    <string name="movie_notification_text"> movies coming soon. Check out now!</string>
    <string name="password_warrning">Enter your password!</string>
    <string name="username_warrning">Enter your username!</string>
    <string name="connection_warrning">Internet connection required</string>
    <string name="connection_required">Please connect to the internet to continue.</string>
    <string name="connect">Connect</string>
    <string name="action_cinema">Cinema</string>
    <string name="title_activity_cinema">CinemaActivity</string>
    <string name="book">BOOK NOW</string>
    <string name="taken">Taken</string>
    <string name="available">Available</string>
    <string name="selected">Selected</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total:</string>
    <string name="checkout_summary">Checkout Summary</string>
    <string name="summary_movie">Movie:</string>
    <string name="summary_date">Date and Time:</string>
    <string name="summary_tickets">Tickets:</string>
    <string name="summary_seats">Seats:</string>
    <string name="proceed">Proceed to Payment</string>
    <string name="tickets">Tickets</string>
    <string name="card_hint">Card Number</string>
    <string name="com.stripe.publishable_key" translatable="false">pk_test_zE1ULZbOXShTdmPbVv4512s7</string>
    <string name="submit">Submit</string>
    <string name="security_code">Security Code</string>
    <string name="name">Credit Card Holder</string>
    <string name="visa">Visa</string>
    <string name="mastercard">Mastercard</string>

</resources>
