<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.zsamir.movieappintership.Login.LoginActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/username_hint"
        android:textColorHint="@color/colorMovieItemText"
        android:textColor="@color/colorTextDetails"
        android:textSize="13sp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/username_login" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password_hint"
        android:textColorHint="@color/colorMovieItemText"
        android:textColor="@color/colorTextDetails"
        android:textSize="13sp"
        android:layout_below="@+id/username_login"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/password_login" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_login"
        android:text="@string/login"
        android:background="@color/colorAccent"
        android:textSize="13sp"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="27dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/login_button"/>

    <TextView
        android:layout_marginTop="70dp"
        android:layout_below="@id/login_button"
        android:id="@+id/forgot_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_details"
        android:clickable="true"
        android:textSize="12sp"
        android:textColor="@color/colorText"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/create_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:clickable="true"
        android:textSize="13sp"
        android:textColor="@color/colorText"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        />

</RelativeLayout>
