<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorNavBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/person_name"
        android:gravity="center_vertical"
        android:textSize="20sp"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/colorNavHeaderBreakLine">
    </View>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_list"
        android:id="@+id/your_list"
        android:paddingLeft="25dp"
        android:paddingStart="25dp"
        android:textColor="@color/colorMovieItemText"
        android:background="@color/colorPrimary"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/favorites"
        android:background="@color/colorNavBar"
        android:clickable="true">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/like_filled"
            android:id="@+id/favourites_icon"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/favourites_text"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorMovieItemText"
            android:layout_toRightOf="@id/favourites_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favourites"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/colorNavHeaderBreakLine2">
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/your_watchlist"
        android:background="@color/colorNavBar"
        android:clickable="true">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/bookmark_filled"
            android:id="@+id/your_watchlist_icon"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/your_watchlist_text"
            android:textColor="@color/colorMovieItemText"
            android:layout_toRightOf="@id/your_watchlist_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/watchlist"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/colorNavHeaderBreakLine2">
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/your_ratings"
        android:background="@color/colorNavBar"
        android:clickable="true">

        <ImageView
            android:duplicateParentState="true"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/star_1_copy_4"
            android:id="@+id/your_ratings_icon"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:duplicateParentState="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/your_ratings_text"
            android:textColor="@color/colorMovieItemText"
            android:layout_toRightOf="@id/your_ratings_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratings"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:id="@+id/more_nav"
        android:paddingLeft="25dp"
        android:paddingStart="25dp"
        android:textColor="@color/colorMovieItemText"
        android:background="@color/colorPrimary"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cinema_nav"
        android:background="@color/colorNavBar"
        android:clickable="true">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/cinema_icon"
            android:id="@+id/cinema_nav_icon"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/cinema_nav_text"
            android:textColor="@color/colorMovieItemText"
            android:layout_toRightOf="@id/cinema_nav_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_cinema"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/colorNavHeaderBreakLine2">
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_nav"
        android:background="@color/colorNavBar"
        android:clickable="true">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/group_12_copy"
            android:id="@+id/settings_nav_icon"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/settings_nav_text"
            android:textColor="@color/colorMovieItemText"
            android:layout_toRightOf="@id/settings_nav_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/colorNavHeaderBreakLine2">
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logout_nav"
        android:background="@color/colorNavBar"
        android:clickable="true">

        <ImageView
            android:duplicateParentState="true"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/redo_48"
            android:id="@+id/logout_nav_icon"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:duplicateParentState="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/logout_nav_text"
            android:textColor="@color/colorMovieItemText"
            android:layout_toRightOf="@id/logout_nav_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            />

    </RelativeLayout>

</LinearLayout>
